Add padding around book title image.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,10 @@
 <header class="site-header">
 
-  <div class="wrapper">
+  <div class="wrapper book-title">
 
     <a class="site-title" href="{{ site.baseurl }}/">
       <img src="images/head_first_ruby_title.png" height="89" width="610" alt="Head First Ruby"/>
     </a>
-
   </div>
 
 </header>
