Scale book title image height proportionally on mobile.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -211,6 +211,9 @@ pre {
     padding: 25px;
     text-align: center;
 }
+.book-title img {
+    height: auto;
+}
 .site-title {
     width: 100%;
 }
