Reduce line height for .chapter .title.

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -45,6 +45,7 @@
     .title {
         font-size: 24pt;
         color: gray;
+        line-height: 120%;
     }
     .buttons {
         display: block;
