Separate chapter heading from description.

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -38,6 +38,7 @@
     
     .heading {
         display: inline-block;
+        margin-bottom: 20px;
     }
     .chapter-number {
         font-size: 24pt;
