Right-align buttons.

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -53,6 +53,7 @@
         width: 50%;
         float: right;
         margin: 10px;
+        text-align: right;
     }
     .button {
         display: inline-block;
