Add 'Coming Soon' overlays.

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -59,6 +59,7 @@
         display: inline-block;
         width: 30%;
         margin-right: 10px;
+        position: relative;
     }
     p {
         clear: both;
@@ -68,6 +69,16 @@
     }
 }
 
+.comingsoon {
+    background: white;
+    color: black;
+    opacity: 0.5;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
     .chapter .buttons {
         display: block;
