Switch to Amazon button iframe in sidebar.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,6 @@
 <aside class="book-sidebar">
-  <a href="http://amzn.com/1449372651">
-    <img src="images/head_first_ruby_cover.png" width="245" height="229" alt="Head First Ruby Cover"/>
-  </a>
-<a target="_blank" rel="nofollow" href="http://www.amazon.com/Head-First-Ruby-Jay-McGavren/dp/1449372651/?_encoding=UTF8&camp=1789&creative=9325&keywords=head%20first%20ruby&linkCode=ur2&qid=1450549331&sr=8-1&tag=heafirruboffs-20&linkId=CM5ISWJBH23P6ZW2">Head First Ruby</a><img src="http://ir-na.amazon-adsystem.com/e/ir?t=heafirruboffs-20&l=ur2&o=1" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=heafirruboffs-20&marketplace=amazon&region=US&placement=1449372651&asins=1449372651&linkId=P66QETFEQ3K5IMGD&show_border=true&link_opens_in_new_window=true">
+  </iframe>
   <ul class="contact-list">
     <li>{{ site.title }}</li>
     <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
