--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <aside class="book-sidebar">
-  <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=heafirruboffs-20&marketplace=amazon&region=US&placement=1449372651&asins=1449372651&linkId=P66QETFEQ3K5IMGD&show_border=true&link_opens_in_new_window=true">
-  </iframe>
+  <a href="http://amzn.com/1449372651">
+    <img src="images/head_first_ruby_cover.png" width="245" height="229" alt="Head First Ruby Cover"/>
+  </a>
   <p class="text">{{ site.description }}</p>
   <ul class="contact-list">
     <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
