Update Amazon links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,9 @@
 <aside class="book-sidebar">
-  <a href="http://amzn.com/1449372651">
+  <a href="https://www.amazon.com/dp/1491969555">
     <img src="/images/head_first_ruby_cover.png" width="245" height="229" alt="Head First Ruby Cover"/>
   </a>
   <p class="text">{{ site.description }}</p>
-  <p><a href="http://cdn.oreillystatic.com/oreilly/booksamplers/9781449372651_sampler.pdf">Read a sample chapter</a></p>
-  <p><a href="http://amzn.com/1449372651">Buy the book via Amazon</a></p>
+  <p><a href="https://www.amazon.com/dp/1491969555">Buy the book via Amazon</a></p>
   <ul class="contact-list">
     <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
   </ul>
