Update title in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper book-title">
 
     <a class="site-title" href="{{ site.baseurl }}/">
-      <img src="/images/head_first_ruby_title.png" height="89" width="610" alt="Head First Ruby"/>
+      <img src="/images/head_first_go_title.png" height="85" width="610" alt="Head First Go"/>
     </a>
   </div>
 
