Remove book cover image temporarily

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="book-sidebar">
-  <a href="https://www.amazon.com/dp/1491969555">
-    <img src="/images/head_first_ruby_cover.png" width="245" height="229" alt="Head First Ruby Cover"/>
-  </a>
+  <!-- <a href="https://www.amazon.com/dp/1491969555"> -->
+  <!--   <img src="/images/head_first_ruby_cover.png" width="245" height="229" alt="Head First Ruby Cover"/> -->
+  <!-- </a> -->
   <p class="text">{{ site.description }}</p>
   <p><a href="https://www.amazon.com/dp/1491969555">Buy the book via Amazon</a></p>
   <ul class="contact-list">
