Add link as fallback in case banner is ad-blocked

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,9 +4,10 @@
   <!-- </a> -->
   <p class="text">{{ site.description }}</p>
   <div class="banner">
-    <div>
     <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=jaymcgavren-20&marketplace=amazon&region=US&placement=1491969555&asins=1491969555&linkId=26ab4f2f096e46da47f64c9efb3a768d&show_border=true&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
-    </div>
+  </div>
+  <div>
+    <a target="_blank" href="https://www.amazon.com/gp/product/1491969555/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1491969555&linkCode=as2&tag=jaymcgavren-20&linkId=1ee510567a4a741eb7ee4d52f6a1f1a2">Get the book on Amazon</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=jaymcgavren-20&l=am2&o=1&a=1491969555" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
   </div>
 </aside>
