--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -148,7 +148,16 @@ pre {
     }
 }
 
-
+/**
+ * Tables
+ */
+table {
+    border-collapse: collapse;
+}
+th, td {
+    padding: 8px;
+    border: 2px solid black;
+}
 
 /**
  * Wrapper
